--- a/YuWaShop/Person/SubVC/HeaderVC/Shop/SubVC/ChildAccountTableViewCell.xib
+++ b/YuWaShop/Person/SubVC/HeaderVC/Shop/SubVC/ChildAccountTableViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="ChildAccountTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="110"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="66" id="KGk-i7-Jjw" customClass="ChildAccountTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="368" height="66"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="110"/>
+                <rect key="frame" x="0.0" y="0.0" width="368" height="66"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aeU-nJ-0FE">
-                        <rect key="frame" x="0.0" y="0.0" width="366" height="0.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="368" height="0.5"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="lQz-4P-zZ8"/>
@@ -33,13 +33,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123456789" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZh-1e-s21">
-                        <rect key="frame" x="78" y="77" width="75" height="17"/>
+                        <rect key="frame" x="45" y="32.5" width="75" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHd-hm-Yra">
-                        <rect key="frame" x="16" y="77" width="29" height="17"/>
+                        <rect key="frame" x="16" y="32.5" width="29" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -48,7 +48,7 @@
                 <constraints>
                     <constraint firstItem="lXq-Wf-QYe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="3tQ-ML-WRq"/>
                     <constraint firstItem="wHd-hm-Yra" firstAttribute="leading" secondItem="lXq-Wf-QYe" secondAttribute="leading" id="XnB-qw-J4s"/>
-                    <constraint firstItem="ZZh-1e-s21" firstAttribute="leading" secondItem="wHd-hm-Yra" secondAttribute="trailing" constant="33" id="eWT-hK-xxL"/>
+                    <constraint firstItem="ZZh-1e-s21" firstAttribute="leading" secondItem="wHd-hm-Yra" secondAttribute="trailing" id="eWT-hK-xxL"/>
                     <constraint firstItem="aeU-nJ-0FE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="fKO-f9-mjX"/>
                     <constraint firstAttribute="trailing" secondItem="aeU-nJ-0FE" secondAttribute="trailing" id="jXN-tP-gfC"/>
                     <constraint firstItem="aeU-nJ-0FE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ksR-DU-nlc"/>
@@ -57,7 +57,11 @@
                     <constraint firstAttribute="bottomMargin" secondItem="wHd-hm-Yra" secondAttribute="bottom" constant="8" id="w85-ye-ojo"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="10" y="119"/>
+            <connections>
+                <outlet property="accountLabel" destination="ZZh-1e-s21" id="fNT-ZX-FIZ"/>
+                <outlet property="shopNameLabel" destination="lXq-Wf-QYe" id="PgY-TC-v1B"/>
+            </connections>
+            <point key="canvasLocation" x="9" y="97"/>
         </tableViewCell>
     </objects>
 </document>
