--- a/YuWaShop/Person/SubVC/商务会员/controller/ExchangeViewController.xib
+++ b/YuWaShop/Person/SubVC/商务会员/controller/ExchangeViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExchangeViewController">
             <connections>
+                <outlet property="exchangeGradeTextField" destination="iqr-k3-FPi" id="tNB-wB-5L7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -74,6 +75,9 @@
                     <state key="normal" title="确认兑换">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="suerExchangeBtnAction:" destination="-1" eventType="touchUpInside" id="a5T-ew-yfn"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bj8-5B-TKl">
                     <rect key="frame" x="0.0" y="224" width="375" height="60"/>
@@ -89,9 +93,12 @@
                             <state key="normal" title="全部提现">
                                 <color key="titleColor" red="0.28235294119999998" green="0.52941176469999995" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <connections>
+                                <action selector="exchangeAllGrade:" destination="-1" eventType="touchUpInside" id="lOB-iU-QlT"/>
+                            </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bV-SM-Bsd">
-                            <rect key="frame" x="74.5" y="21.5" width="24" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bV-SM-Bsd">
+                            <rect key="frame" x="74.5" y="30" width="0.0" height="0.0"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.4823529412" green="0.47450980390000003" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
