--- a/YuWaShop/Home/SubVC/PayBill/YWHomePayBillViewController.xib
+++ b/YuWaShop/Home/SubVC/PayBill/YWHomePayBillViewController.xib
@@ -65,7 +65,7 @@
                         </label>
                         <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fw0-fI-WUd">
                             <rect key="frame" x="15" y="86" width="22" height="22"/>
-                            <color key="backgroundColor" red="0.1450980392" green="0.75294117650000003" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.2784313725" green="0.52549019610000003" blue="0.81960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="22" id="4yd-ci-Nxy"/>
                                 <constraint firstAttribute="height" constant="22" id="T6I-Kw-dwZ"/>
